--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                          href="http://www.pokemesh.com/map/#lt=25.05002029764708&ln=121.56056022643705&z=14"
                          target="_blank">map</a>
                       <a class="link"
-                         href="https://poke5566.com/"
+                         href="https://www.fastpokemap.se/beta/#25.059360610390435,121.54964447021486"
                          target="_blank">map</a>
                       <a class="link"
                          href="https://pkget.com/"
